<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SimpleRadio_v1.0</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome">欢迎使用</string>
    <string name="username">用户名：</string>
    <string name="password">密     码：</string>
    <string name="login">登 录</string>
    <string name="exit">退 出</string>
    <string name="send">按住说话</string>
    <string name="author">by geekeeper</string>
    
</resources>