<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="40sp" 
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username" 
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
           />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password" 
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" 
            android:gravity="right|bottom">

            <Button
                android:id="@+id/login_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/login" 
                android:layout_marginRight="10dp"
                android:onClick="onLoginClick"
                />

            <Button
                android:id="@+id/exit_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/exit" 
                android:layout_marginRight="20dp"
                android:onClick="onExitClick"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >     
               
            <TextView
	            android:id="@+id/textAuthor"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/author" 
	            android:textSize="20sp"
	        	android:layout_alignParentBottom="true"
	        	android:layout_centerHorizontal="true"
	        	android:layout_marginRight="20dp"
            />
                
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>